@@ -35,7 +35,7 @@ requires:
   perl: 5.8.0
 resources:
   bugtracker: https://rt.cpan.org/Public/Dist/Display.html?Name=Log-FreeSWITCH-Line
-  homepage: https://github.com/tupinek/Log-FreeSWITCH-Line
+  homepage: https://github.com/michal-josef-spacek/Log-FreeSWITCH-Line
   license: http://opensource.org/licenses/bsd-license.php
-  repository: git://github.com/tupinek/Log-FreeSWITCH-Line
+  repository: git://github.com/michal-josef-spacek/Log-FreeSWITCH-Line
 version: '0.07'
