@@ -25,8 +25,8 @@ requires 'Scalar::Util' => 0;
 requires 'perl' => '5.8.0';
 resources 'bugtracker' => 'https://rt.cpan.org/Public/Dist/Display.html'.
 	'?Name=Log-FreeSWITCH-Line';
-resources 'homepage' => 'https://github.com/tupinek/Log-FreeSWITCH-Line';
-resources 'repository' => 'git://github.com/tupinek/Log-FreeSWITCH-Line';
+resources 'homepage' => 'https://github.com/michal-josef-spacek/Log-FreeSWITCH-Line';
+resources 'repository' => 'git://github.com/michal-josef-spacek/Log-FreeSWITCH-Line';
 test_requires 'DateTime' => 0;
 test_requires 'English' => 0;
 test_requires 'Error::Pure::Utils' => 0.22;
